Added Admin Endpoint, fixes to user, EO, DB schema TicketType, Admin
